# trade-surveillance-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  P2_FIX_Native_Trade_Surveillance_Engine_HLD.md  P2_trade_surveillance_engine_architecture.md  P2_trade_surveillance_engine_build_guide.md  README.md  docker-compose.yml  tsan_suppressions.txt
calibration/: .gitignore  PARAMETER_MAPPING.md  README.md
calibration/output/: stylized_facts.json
calibration/scripts/: compute_stylized_facts.py
calibration/scripts/wrds_queries/: run_diagnose_query.py  run_quotes_query.py  run_trades_query.py  verify_suffix.py
cpp/api/: CMakeLists.txt  README.md  api.cpp  api.hpp  api_server.cpp  api_server.hpp  json_encode.cpp  json_encode.hpp  live_book_registry.cpp  live_book_registry.hpp  main.cpp
cpp/db/: CMakeLists.txt  README.md  alert_store.cpp  alert_store.hpp  db.cpp  db.hpp  db_alert_sink.hpp  db_config.cpp  db_config.hpp  schema.sql  stored_alert.hpp
cpp/detectors/: CMakeLists.txt  README.md  account_registry.cpp  account_registry.hpp  alert.hpp  detector_event.hpp  detectors.cpp  detectors.hpp  front_running_detector.cpp  front_running_detector.hpp  i_detector.hpp  marking_the_close_detector.cpp  marking_the_close_detector.hpp  spoofing_layering_detector.cpp  spoofing_layering_detector.hpp  statistical_baseline_detector.cpp  statistical_baseline_detector.hpp  wash_trade_detector.cpp  wash_trade_detector.hpp
cpp/fix/: CMakeLists.txt  README.md  event_sink.hpp  fix.cpp  fix.hpp  fix_application.cpp  fix_application.hpp  message_translator.cpp  message_translator.hpp  tsan_suppressions.cpp  types.cpp  types.hpp
cpp/harness/: CMakeLists.txt  README.md  evaluation.cpp  evaluation.hpp  ground_truth.cpp  ground_truth.hpp  harness.cpp  harness.hpp  json_output.cpp  json_output.hpp  main.cpp  replay_runner.cpp  replay_runner.hpp  run_rate_sweep.sh  sarao_validation_main.cpp
cpp/harness/results/: evaluation.json  sarao.json  spoofing_rate_sweep.json
cpp/ingestion/: CMakeLists.txt  README.md  event_codec.cpp  event_codec.hpp  ingestion.cpp  ingestion.hpp  ingestion_event.hpp  kafka_consumer.cpp  kafka_consumer.hpp  kafka_producer.cpp  kafka_producer.hpp  spsc_ring_buffer.hpp
cpp/ml_client/: CMakeLists.txt  README.md  ml_anomaly_detector.cpp  ml_anomaly_detector.hpp  ml_json.cpp  ml_json.hpp  ml_score_client.cpp  ml_score_client.hpp  ml_scoring_worker.cpp  ml_scoring_worker.hpp  scoring_request.hpp
cpp/orderbook/: CMakeLists.txt  README.md  depth_snapshot.hpp  order_book.cpp  order_book.hpp  orderbook.cpp  orderbook.hpp
cpp/pipeline/: CMakeLists.txt  README.md  alert_sink.hpp  live_consumer.cpp  live_consumer.hpp  live_pipeline.cpp  live_pipeline.hpp  pipeline_event_sink.hpp
cpp/simulator/: CMakeLists.txt  account_registry.cpp  account_registry.hpp  baseline_generator.cpp  baseline_generator.hpp  id_generator.cpp  id_generator.hpp  instrument_universe.cpp  instrument_universe.hpp  main.cpp  random_utils.cpp  random_utils.hpp  simulator.cpp  simulator.hpp  types.cpp  types.hpp
cpp/simulator/abuse/: front_running.cpp  front_running.hpp  marking_the_close.cpp  marking_the_close.hpp  sarao_case.cpp  sarao_case.hpp  spoofing_layering.cpp  spoofing_layering.hpp  wash_trade.cpp  wash_trade.hpp
cpp/simulator/serialization/: csv_writer.cpp  csv_writer.hpp  fix_writer.cpp  fix_writer.hpp  json_writer.cpp  json_writer.hpp
cpp/tests/: CMakeLists.txt
cpp/tests/api/: CMakeLists.txt  api_server_test.cpp  api_test.cpp  db_test_helpers.hpp  json_encode_test.cpp  live_book_registry_test.cpp  test_api_server.hpp
cpp/tests/db/: CMakeLists.txt  alert_store_concurrency_test.cpp  alert_store_query_test.cpp  alert_store_test.cpp  db_alert_sink_integration_test.cpp  db_test.cpp  db_test_helpers.hpp
cpp/tests/detectors/: CMakeLists.txt  account_registry_test.cpp  detectors_test.cpp  front_running_detector_test.cpp  marking_the_close_detector_test.cpp  spoofing_layering_detector_test.cpp  statistical_baseline_detector_test.cpp  wash_trade_detector_test.cpp
cpp/tests/fix/: CMakeLists.txt  fix_session_test_fixture.cpp  fix_session_test_fixture.hpp  fix_test.cpp  fix_to_pipeline_integration_test.cpp  live_session_test.cpp  malformed_message_test.cpp  message_translator_test.cpp  simulator_end_to_end_test.cpp
cpp/tests/harness/: CMakeLists.txt  evaluation_test.cpp  ground_truth_test.cpp  harness_test.cpp  json_output_test.cpp  replay_runner_kafka_test.cpp
cpp/tests/ingestion/: CMakeLists.txt  backpressure_test.cpp  event_codec_test.cpp  ingestion_test.cpp  kafka_replay_test.cpp  spsc_ring_buffer_test.cpp  two_thread_pipeline_test.cpp
cpp/tests/ml_client/: CMakeLists.txt  graceful_degradation_test.cpp  ml_anomaly_detector_test.cpp  ml_json_test.cpp  ml_score_client_test.cpp  ml_scoring_worker_test.cpp  python_ml_service_process.cpp  python_ml_service_process.hpp  test_http_server.hpp
cpp/tests/orderbook/: CMakeLists.txt  depth_snapshot_test.cpp  order_book_test.cpp  orderbook_test.cpp
cpp/tests/pipeline/: CMakeLists.txt  live_consumer_sustained_load_test.cpp  live_pipeline_test.cpp
cpp/tests/simulator/: CMakeLists.txt  abuse_front_running_test.cpp  abuse_marking_the_close_test.cpp  abuse_spoofing_layering_test.cpp  abuse_wash_trade_test.cpp  baseline_generator_test.cpp  fix_writer_test.cpp  instrument_and_account_test.cpp  json_csv_writer_test.cpp  simulator_test.cpp  types_and_ground_truth_test.cpp
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.test.json
dashboard/src/: App.css  App.tsx  api.ts  detectorNames.test.ts  detectorNames.ts  evidence.ts  index.css  severity.ts  tabs.ts  types.ts
dashboard/src/components/: AlertActions.css  AlertActions.tsx  AlertCard.css  AlertCard.tsx  AlertDetail.css  AlertDetail.tsx  AlertQueue.tsx  AlertRow.css  AlertRow.tsx  CumulativeDepthChart.css  CumulativeDepthChart.tsx  KpiStrip.css  (+21 more)
ml_service/: README.md  requirements.txt
ml_service/app/: features.py  main.py  model.py  schemas.py  training_data.py
ml_service/tests/: test_artificial_delay.py  test_features.py  test_main.py  test_model.py  test_training_data.py
(+7 files in other folders)
